# xml-comparator

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
perf/: .gitignore  IMPLEMENTATION_STATUS.md  README.md
perf/scripts/: k6_batch_test.js  micro_benchmark.rs  run_perf_tests.sh  test_600k.sh  validate_framework.sh  wrk_batch.lua
perf/tools/: Cargo.toml  gen_payload.rs  micro_benchmark.rs  simple_benchmark.rs
src/: lib.rs  main.rs
src/handlers/: auth_handlers.rs  comparison_handlers.rs  mod.rs
src/models/: auth.rs  comparison.rs  error.rs  mod.rs
src/services/: auth_service.rs  http_client.rs  mod.rs  xml_comparison.rs
src/utils/: validation.rs
tests/: integration_tests.rs
xml-compare-api/: Cargo.toml
xml-compare-api/src/: main.rs
xml-comparison-api/: .gitignore  Cargo.toml  README.md
xml-comparison-api/src/: main.rs
