[package]
name = "xml-compare-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xml-compare-api"
path = "src/main.rs"

[lib]
name = "xml_compare_api"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# OpenAPI/Swagger
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tower = { version = "0.4", features = ["util"] }