[package]
name = "xml-comparison-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = { version = "0.7", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML processing
quick-xml = "0.31"
xmltree = "0.10"
regex = "1.10"

# HTTP client with rustls instead of native-tls
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"], default-features = false }

# API documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Authentication and session management
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dashmap = "5.5"

# Configuration
config = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async utilities
once_cell = "1.19"
futures = "0.3"